UY-1269 CR-700 fixes